# hutsulshchyna-android

./: CMakeLists.txt  README.md  coord-handler.cpp  coord-handler.h  file-handler.cpp  file-handler.h  main.cpp  serialport-handler-android.cpp  serialport-handler-android.h  serialport-handler.cpp  serialport-handler.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/main/java/com/example/portwrapper/: PortWrapper.java
nmea_parser/: NMEA_Struct.h  parsenmea.c
qml/: InitialItem.qml  Main.qml  Toast.qml  ToastManager.qml  serialport-settings-new.qml  serialport-settings-old.qml  serialport-settings.qml  terminal.qml
qml/+android/: serialport-settings.qml
translations/ua/: ukrainian.qm  ukrainian.ts
